--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ aside {
   height: 25rem;
   display: inline-block;
   vertical-align: middle;
+  display: flex;
+  justify-content: right;
+  padding-top: 3rem;
+  padding-right: 1rem;
+  padding-bottom: 0.5rem;
 }
 main {
   background-color: brown;
@@ -61,16 +66,20 @@ main {
   padding-bottom: 1rem;
   height: 20rem;
   width: 50%;
-  object-fit: cover;
-  font-size: 15rem;
 }
 .aside-middle {
   display: flex;
-  justify-content: end;
+  justify-content: center;
+  background-image: url(./feader\ pic.png);
+  background-repeat: no-repeat;
+  height: 21rem;
+  width: 14rem;
+  object-fit: cover;
+  align-items: center;
 }
 .box {
-  width: 7rem;
-  height: 7rem;
+  width: 6rem;
+  height: 6rem;
   background-color: white;
   text-align: center;
 }
@@ -82,3 +91,8 @@ main {
   font-size: 0.5rem;
   color: grey;
 }
+/* .box1 {
+  background-image: url(./feader\ pic.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
